cmake_minimum_required(VERSION 3.15.1)

project(aoc2023 LANGUAGES C CXX Swift)

# if(CMAKE_SYSTEM_NAME STREQUAL Windows OR CMAKE_SYSTEM_NAME STREQUAL Darwin)
#   option(BUILD_SHARED_LIBS "Build shared libraries by default" YES)
# endif()

add_subdirectory(1)
add_subdirectory(2)
add_subdirectory(3)
add_subdirectory(4)
add_subdirectory(5)
add_subdirectory(6)
add_subdirectory(7)
add_subdirectory(10)
add_subdirectory(11)